# echoer

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml  tailwind.config.js
client/assets/styling/: global.css  tailwind.css
client/src/: main.rs
client/src/components/: mod.rs  navbar.rs  notification.rs  theme_toggle.rs
client/src/utils/: dom.rs  error.rs
client/src/views/: home.rs
common/: Cargo.toml
common/src/: error.rs  lib.rs
frontend/: Cargo.toml  tailwind.config.js
frontend/assets/: tailwind.css
frontend/assets/styling/: global.css  navbar.css  tailwind.css
frontend/src/: main.rs
frontend/src/common/: dom.rs  error.rs  hooks.rs  mod.rs
frontend/src/components/: mod.rs  navbar.rs  notification.rs  theme_toggle.rs
frontend/src/views/: home.rs
server/: Cargo.toml
server/src/: db.rs  main.rs
server/src/utils/: error.rs
